--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,12 @@
     border-radius: 10px;
     opacity:0.7;
 }
+
+/* for image uploading */
+.new-pics
+{
+    background-color:#8EE5EE;
+    width:500px;
+    height:30px;
+    padding:3px;
+}
