--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ src: url('Calligraphic 421 BT.ttf');
 .rg-image-wrapper{
     position:relative;
     padding:20px 30px;
-    background:transparent url(../images/black.png) repeat top left;
+    /*background:transparent url(../images/black.png) repeat top left;*/
+    background-color: #D3D3D5;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
